--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "name": "burger-database",
   "version": "1.0.0",
-  "description": "A mySQL based burger app using a homemade ORM",
-  "main": "app.js",
+  "description": "A MySQL burger databse using a homegrown ORM",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.15.2",
+    "body-parser": "^1.17.1",
+    "express-handlebars": "^3.0.0",
+    "method-override": "^2.3.7",
+    "mysql": "^2.13.0"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -15,12 +24,5 @@
   "bugs": {
     "url": "https://github.com/mtpetros/burger-database/issues"
   },
-  "homepage": "https://github.com/mtpetros/burger-database#readme",
-  "dependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "express-handlebars": "^3.0.0",
-    "method-override": "^2.3.7",
-    "mysql": "^2.13.0"
-  }
+  "homepage": "https://github.com/mtpetros/burger-database#readme"
 }
